--- a/rag01.ipynb
+++ b/rag01.ipynb
@@ -186,9 +186,9 @@
     "# Your service details\n",
     "search_service_name = \"ai-search-service-01\"\n",
     "search_index_name = \"imf0x\"\n",
-    "api_key = \"MJR0bptv0TCgtPNg4fnmN7fAm0FJYP1GD61inCij4MAzSeCTnacB\"\n",
+    "api_key = \"XXX\"\n",
     "\n",
-    "PUT https://ai-search-service-01.search.windows.net/indexes/imf0x?api-version=2023-11-01&allowIndexDowntime=true\n",
+    "curl -X PUT https://ai-search-service-01.search.windows.net/indexes/imf0x?api-version=2023-11-01&allowIndexDowntime=true\n",
     "Content-Type: application/json\n",
     "api-key: {{MJR0bptv0TCgtPNg4fnmN7fAm0FJYP1GD61inCij4MAzSeCTnacB}}\n",
     "{\n",
