--- a/rag01.ipynb
+++ b/rag01.ipynb
@@ -130,16 +130,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install azure-search-documents\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "import os\n",
     "from openai import AzureOpenAI\n",
     "\n",
@@ -171,6 +161,16 @@
    "source": [
     "print(len(text_embeddings))\n",
     "print(len(text_embeddings[0][\"embedding\"]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Create a vector index on Azure AI Search \n",
+    "Using the REST API here."
    ]
   },
   {
@@ -294,7 +294,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Upload the document "
+    "### Upload the document to the index "
    ]
   },
   {
