--- a/rag01.ipynb
+++ b/rag01.ipynb
@@ -190,7 +190,7 @@
     "\n",
     "curl -X PUT https://ai-search-service-01.search.windows.net/indexes/imf0x?api-version=2023-11-01&allowIndexDowntime=true\n",
     "Content-Type: application/json\n",
-    "api-key: {{MJR0bptv0TCgtPNg4fnmN7fAm0FJYP1GD61inCij4MAzSeCTnacB}}\n",
+    "api-key: {{XXX}}\n",
     "{\n",
     "    \"name\": \"{{imf0x}}\",\n",
     "    \"fields\": [\n",
